# trouve

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DIFFERENCES.md  Dockerfile.server  Dockerfile.server.release  INSTALL.md  LICENSE  NAME.md  README.md  docker-compose.review.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: renovate.json5
.github/workflows/: bench.yml  docker.yml  lint.yml  release.yml  test.yml
benches/: index_and_search.rs
benchmarks/: compare_benchmarks.py  run_benchmarks.sh  run_ci_bench.sh  run_git_vs_nogit.sh  run_quality.py  test_compare_benchmarks.py  to_gha_bench.py
crates/slint-code-view/: Cargo.toml
crates/slint-code-view/examples/: code_view_demo.rs
crates/slint-code-view/src/: lib.rs
crates/slint-code-view/ui/: code-view-window.slint  code-view.slint
crates/slint-diff-view/: Cargo.toml  build.rs
crates/slint-diff-view/examples/: diff_view_demo.rs
crates/slint-diff-view/src/: lib.rs
crates/slint-diff-view/ui/: diff-view-window.slint  diff-view.slint
crates/slint-markdown/: Cargo.toml  build.rs
crates/slint-markdown/examples/: markdown_demo.rs
crates/slint-markdown/src/: lib.rs
crates/slint-markdown/ui/: markdown-view.slint  markdown-window.slint
crates/slint-media-view/: Cargo.toml  build.rs
crates/slint-media-view/src/: lib.rs
crates/slint-media-view/ui/: media-view-window.slint  media-view.slint
crates/slint-terminal/: Cargo.toml  build.rs
crates/slint-terminal/examples/: terminal_demo.rs
crates/slint-terminal/src/: lib.rs
crates/slint-terminal/ui/: terminal-grid.slint  terminal-window.slint
crates/trouve-agents/: Cargo.toml
crates/trouve-agents/src/: claude.rs  codex.rs  cursor.rs  install.rs  lib.rs  login.rs
crates/trouve-agents/tests/: adapters.rs
crates/trouve-app/: Cargo.toml  build.rs
crates/trouve-app/src/: controller.rs  main.rs  notify.rs  opener.rs  render.rs  theme.rs  ui.rs  winstate.rs
crates/trouve-app/ui/: app.slint  automations-screen.slint  connectivity-banner.slint  model-options.slint  pull-requests-screen.slint  scroll-keys.slint  settings-window.slint  theme.slint
crates/trouve-cli/: Cargo.toml
crates/trouve-cli/src/: auth.rs  bridge.rs  client.rs  main.rs
crates/trouve-client-core/: Cargo.toml
crates/trouve-client-core/src/: client.rs  lib.rs  team_viewmodel.rs  title.rs  viewmodel.rs
crates/trouve-core/: Cargo.toml
crates/trouve-core/skills/code-review/: SKILL.md
crates/trouve-core/skills/debug/: SKILL.md
crates/trouve-core/skills/security-review/: SKILL.md
crates/trouve-core/skills/simplify/: SKILL.md
crates/trouve-core/skills/skill-creator/: SKILL.md
crates/trouve-core/skills/verify/: SKILL.md
crates/trouve-core/src/: automations.rs  commands.rs  config.rs  connectivity.rs  context.rs  engine.rs  git.rs  github.rs  lib.rs  local.rs  mcp.rs  modes.rs  permissions.rs  review.rs  review_identities.rs  reviewers.rs  skills.rs  store.rs  terminal.rs  title.rs  title_model.rs
crates/trouve-core/src/engine/: routing.rs
crates/trouve-core/src/tools/: diff.rs  fs.rs  glob.rs  grep.rs  mod.rs  patch.rs  search.rs  shell.rs  skill.rs  todo.rs  web.rs
crates/trouve-protocol/: Cargo.toml
crates/trouve-protocol/src/: events.rs  lib.rs  requests.rs
crates/trouve-providers/: Cargo.toml
crates/trouve-providers/data/: models-dev-snapshot.json
crates/trouve-providers/src/: anthropic.rs  auth.rs  azure.rs  bedrock.rs  catalog.rs  codex.rs  codex_responses.rs  kimi_usage.rs  lib.rs  models_dev.rs  openai_compat.rs  secrets.rs  sse.rs  vertex.rs
crates/trouve-search/: Cargo.toml
crates/trouve-server/: Cargo.toml
crates/trouve-server/src/: lib.rs  main.rs  mcp.rs
crates/trouve-server/tests/: e2e_api.rs  openapi_snapshot.rs
crates/trouve-server/tests/snapshots/: openapi.json
crates/trouve-slint-code-view/: Cargo.toml  build.rs
crates/trouve-slint-code-view/examples/: code_view_demo.rs
crates/trouve-slint-code-view/src/: lib.rs
crates/trouve-slint-code-view/ui/: code-view-window.slint
crates/trouve-slint-diff-view/: Cargo.toml
crates/trouve-slint-markdown/: Cargo.toml
crates/trouve-slint-terminal/: Cargo.toml
crates/trouve-slint-terminal/examples/: terminal_demo.rs
crates/trouve-slint-terminal/src/: lib.rs
crates/trouve-slint-terminal/ui/: terminal-view.slint  terminal-window.slint
dev/bench/: data.js
docs/: code-review.md
docs/adr/: 0001-monorepo-cargo-workspace.md  0002-protocol-first-client-server-split.md  0003-worktree-per-session.md  0004-no-os-sandbox-permission-modes.md  0005-split-ui-slint-native-plus-web.md  0006-slint-royalty-free-license.md  0007-shared-search-daemon.md  0008-embedded-server-in-desktop-app.md  0009-thread-owned-todo-snapshots.md  0010-account-centric-multi-instance-github.md  0011-bounded-coalesced-event-ingestion.md  0011-github-app-backed-code-review-service.md  0011-provider-neutral-model-routing.md  0011-server-owned-session-title-model.md  0012-catalog-backed-provider-transports.md  0012-multiple-ephemeral-terminals-per-session.md  0012-policy-ordered-cross-adapter-routing.md  0012-session-scoped-agent-teams.md  0012-single-version-monorepo-release-train.md  0012-trouve-owned-agent-capabilities.md  README.md
docs/design/: event-log.md  integrations.md  provider-capability-parity.md  provider-transports.md  providers.md  slint-spike.md  ux-screen-map.md
examples/: profile_cold.rs  profile_embed.rs
npm/: package-lock.json  package.json  platforms.json
npm/search-core/: README.md  package.json  tsconfig.json
npm/search-darwin-arm64/: package.json
scripts/: fetch-reference.sh  generate_npm_platforms.py  stage_npm_binaries.py  sync_versions.py  test_sync_versions.py  update_models_dev_snapshot.py
src/: bm25.rs  chunk.rs  cli.rs  clone_cache.rs  dense.rs  embed.rs  index.rs  installer.rs  languages.rs  lib.rs  main.rs  manifest.rs  mcp.rs  ranking.rs  search.rs  snapshot.rs  stats.rs  store.rs  tokens.rs  types.rs  utils.rs  walker.rs
tests/: e2e.rs  embed_parity.rs  incremental.rs  proptest_chunker.rs
(+125 files in other folders)
