# Workspace manifest for the trouve monorepo.
#
# Members:
#   crates/trouve-search   — code search/indexing library + CLI (published)
#   crates/trouve-*        — harness crates (protocol, core, providers, server, cli, ...)
#   crates/slint-*         — reusable Slint widget crates (published independently)
#
# Crates are versioned independently; releases are tagged per crate
# (e.g. `trouve-search-v1.2.0`). See docs/adr/0001-monorepo-workspace.md.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jimsimon/trouve"
# Slint 1.17 and its compiler crates require Rust 1.92.
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1"
bytes = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3"
octocrab = "0.49"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.17"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
uuid = { version = "1", features = ["v4"] }

# Internal crates
trouve-protocol = { path = "crates/trouve-protocol", version = "0.1.0" }
trouve-search = { path = "crates/trouve-search", version = "2.1.0" }
trouve-agents = { path = "crates/trouve-agents", version = "0.1.0" }
trouve-core = { path = "crates/trouve-core", version = "0.1.0" }
trouve-providers = { path = "crates/trouve-providers", version = "0.1.0" }
trouve-server = { path = "crates/trouve-server", version = "0.1.0" }
trouve-client-core = { path = "crates/trouve-client-core", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1

# Keep dev target dirs small: full DWARF debuginfo dominates target/ size.
# Line tables are enough for backtraces and panic locations; flip to
# `debug = true` locally if you need to step through code in a debugger.
[profile.dev]
debug = "line-tables-only"

# Dependencies get no debuginfo at all — we don't step through them.
[profile.dev.package."*"]
debug = false
