# Workspace manifest for the trouve monorepo.
#
# Members:
#   crates/trouve-search   — code search/indexing library + CLI (published)
#   crates/trouve-*        — harness crates (protocol, core, providers, server, cli, ...)
#   crates/trouve-slint-*  — reusable Slint widget crates
#
# Every first-party artifact shares one release version and repository tag.
# See docs/adr/0012-single-version-monorepo-release-train.md.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "3.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jimsimon/trouve"
# Slint 1.17 and its compiler crates require Rust 1.92.
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1"
bytes = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "10.4"
octocrab = "0.54"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "stream", "rustls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.17"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
uuid = { version = "1", features = ["v4"] }

# Internal crates
trouve-protocol = { path = "crates/trouve-protocol", version = "3.2.0" }
trouve-search = { path = "crates/trouve-search", version = "3.2.0" }
trouve-agents = { path = "crates/trouve-agents", version = "3.2.0" }
trouve-core = { path = "crates/trouve-core", version = "3.2.0" }
trouve-providers = { path = "crates/trouve-providers", version = "3.2.0" }
trouve-server = { path = "crates/trouve-server", version = "3.2.0" }
trouve-client-core = { path = "crates/trouve-client-core", version = "3.2.0" }
trouve-slint-code-view = { path = "crates/trouve-slint-code-view", version = "3.2.0" }
trouve-slint-diff-view = { path = "crates/trouve-slint-diff-view", version = "3.2.0" }
trouve-slint-markdown = { path = "crates/trouve-slint-markdown", version = "3.2.0" }
trouve-slint-terminal = { path = "crates/trouve-slint-terminal", version = "3.2.0" }

[profile.release]
lto = "thin"
codegen-units = 8

# Keep dev target dirs small: full DWARF debuginfo dominates target/ size.
# Line tables are enough for backtraces and panic locations; flip to
# `debug = true` locally if you need to step through code in a debugger.
[profile.dev]
debug = "line-tables-only"

# Dependencies get no debuginfo at all — we don't step through them.
[profile.dev.package."*"]
debug = false
