[package]
name = "slint-diff-view"
version = "0.1.0"
edition.workspace = true
description = "Virtualized unified-diff viewer component for Slint with per-file collapse."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["slint", "diff", "viewer"]
categories = ["gui"]

[dependencies]
slint.workspace = true

[build-dependencies]
slint-build = "1.17"

[[example]]
name = "diff_view_demo"
