[package]
name = "slint-terminal"
version = "0.1.0"
edition.workspace = true
description = "Terminal scrollback view component for Slint: virtualized monospace output with basic ANSI color support."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["slint", "terminal", "ansi"]
categories = ["gui"]

[dependencies]
slint.workspace = true

[build-dependencies]
slint-build = "1.17"

[[example]]
name = "terminal_demo"
