[package]
name = "trouve-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "External agent backends (Codex app-server, cursor-agent, Claude Code CLI) for the trouve harness"

[dependencies]
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trouve-protocol.workspace = true

[dev-dependencies]
tempfile.workspace = true
