[package]
name = "trouve-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "External agent backends (Codex app-server, cursor-agent, Claude Code CLI) for the trouve harness"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
flate2 = "1"
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trouve-protocol.workspace = true
trouve-providers.workspace = true

[dev-dependencies]
tempfile.workspace = true
