[package]
name = "trouve-app"
version.workspace = true
edition.workspace = true
description = "trouve desktop client: Slint UI over the trouve protocol."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "trouve"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
# unstable-winit-030 exposes the winit window (focus tracking + raise for
# notification clicks); the winit backend itself is already the default.
# renderer-skia is preferred at startup (see main.rs): the default FemtoVG
# renderer corrupts its glyph atlas on some Linux drivers, showing screen
# artifacts whenever text changes (typing) or the window repaints.
slint = { workspace = true, features = ["unstable-winit-030", "renderer-skia"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trouve-client-core.workspace = true
trouve-protocol.workspace = true
# Embedded local server (ADR 0008): the app calls one bootstrap entry point
# and speaks HTTP/SSE to it over loopback. Engine internals stay out of
# reach — trouve-core is deliberately NOT a dependency (invariant 1).
trouve-server.workspace = true
# Plain-data helpers (diff parsing, markdown blocks, highlight segments,
# terminal screen state + key encoding).
trouve-slint-code-view.workspace = true
trouve-slint-diff-view.workspace = true
trouve-slint-markdown.workspace = true
trouve-slint-terminal.workspace = true
# Syntax highlighting for the file viewer.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "pollster"] }
open = "5.3.6"
# Fuzzy filtering for the model search picker.
fuzzy-matcher = "0.3"
shlex = "2.0.1"
# Desktop notifications (turn finished / needs attention).
notify-rust = "4.18.0"
# Automations: local-time rendering of schedule timestamps.
chrono.workspace = true
# Per-launch bearer token for the embedded local server.
uuid.workspace = true

# Prompt attachments: clipboard image paste (arboard), PNG encoding of the
# pasted RGBA pixels, and MIME sniffing for picked files. Arboard otherwise
# builds with an X11-only Linux backend, which cannot see native Wayland
# clipboard images produced by apps such as KDE Spectacle.
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
mime_guess = "2.0.5"
png = "0.18.1"
base64 = "0.22"

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
i-slint-backend-testing = "1.17"
