[package]
name = "trouve-cli"
version = "0.1.0"
edition.workspace = true
description = "Terminal client for the trouve AI coding harness."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "trouve"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
getrandom = "0.3"
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
trouve-core.workspace = true
trouve-protocol.workspace = true
trouve-providers.workspace = true
trouve-server.workspace = true
