[package]
name = "trouve-client-core"
version = "0.1.0"
edition.workspace = true
description = "Shared client logic for trouve UIs: typed protocol client, event stream, and view models."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trouve-protocol.workspace = true
