[package]
name = "trouve-core"
version = "0.1.0"
edition.workspace = true
description = "Core engine of the trouve AI coding harness: sessions, worktrees, event log, checkpoints, tools, and the agent loop."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
ignore = "0.4.27"
octocrab.workspace = true
regex = "1.12.4"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
trouve-agents.workspace = true
trouve-protocol.workspace = true
trouve-providers.workspace = true
# Native semantic code search (invariant: search is a first-class harness
# tool, not an external MCP add-on).
trouve-search.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
