[package]
name = "trouve-protocol"
version.workspace = true
edition.workspace = true
description = "Wire types and OpenAPI schema for the trouve AI coding harness protocol."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[dev-dependencies]
