[package]
name = "trouve-providers"
version = "0.1.0"
edition.workspace = true
description = "LLM provider abstraction and implementations for the trouve AI coding harness."
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.135.0"
aws-smithy-types = "1"
base64 = "0.22"
bytes.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
getrandom = "0.4"
gcp_auth = "0.12.7"
keyring = "4"
sha2 = "0.11"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
trouve-protocol.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
