[package]
name = "trouve-slint-code-view"
version.workspace = true
edition.workspace = true
description = "Virtualized, selectable code viewer component for Slint, with span-based syntax highlight tokens."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["slint", "code", "viewer", "syntax-highlighting"]
categories = ["gui"]

[dependencies]
slint.workspace = true

[build-dependencies]
slint-build = "1.17"

[[example]]
name = "code_view_demo"
