[package]
name = "trouve-slint-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal scrollback view component for Slint: virtualized monospace output with basic ANSI color support."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["slint", "terminal", "ansi"]
categories = ["gui"]

[dependencies]
slint.workspace = true
vt100 = "0.16.2"

[build-dependencies]
slint-build = "1.17"

[[example]]
name = "terminal_demo"
